[gd_scene load_steps=11 format=3 uid="uid://dc1rbppknrh43"]

[ext_resource type="Theme" uid="uid://slghfexedlyr" path="res://scenes/small_font.tres" id="1_76hnl"]
[ext_resource type="Script" uid="uid://bp6wa67jxvj3j" path="res://scenes/ui/new_menu/new_pause_menu.gd" id="2_6ujsf"]
[ext_resource type="FontFile" uid="uid://cjfa4ea02s5yi" path="res://fonts/main_font.png" id="2_dnbp1"]
[ext_resource type="Script" uid="uid://xfjf4ebjxqi3" path="res://scenes/ui/new_menu/menu_button.gd" id="3_dnbp1"]
[ext_resource type="Texture2D" uid="uid://bj5ooio37b4ga" path="res://sprites/hud/hint_point/hint_point_0.png" id="5_x8h66"]
[ext_resource type="Texture2D" uid="uid://cuedlacpy4xs6" path="res://sprites/hud/hint_point/hint_point_1.png" id="6_04n3j"]
[ext_resource type="Texture2D" uid="uid://27iehp7itde1" path="res://sprites/hud/hint_point/hint_point_2.png" id="7_msgju"]
[ext_resource type="Texture2D" uid="uid://call5h120c212" path="res://sprites/hud/hint_point/hint_point_3.png" id="8_yhfdk"]
[ext_resource type="Texture2D" uid="uid://dfixltbhwga22" path="res://sprites/hud/hint_point/hint_point_4.png" id="9_urnj6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uucu8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_x8h66")
}, {
"duration": 1.0,
"texture": ExtResource("6_04n3j")
}, {
"duration": 1.0,
"texture": ExtResource("7_msgju")
}, {
"duration": 1.0,
"texture": ExtResource("8_yhfdk")
}, {
"duration": 1.0,
"texture": ExtResource("9_urnj6")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="NewPauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76hnl")
script = ExtResource("2_6ujsf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "$5000"

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "KILLS: 25"

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SAVES: 11"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="Label4" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "LEVEL 1"

[node name="Label5" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "16.32 FEET"

[node name="Label6" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "0:00 / 0:00"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 55

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_dnbp1")
text = "PAUSED"

[node name="ResumeGame" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "RESUME GAME"
script = ExtResource("3_dnbp1")
signal_to_emit = &"game_unpaused"

[node name="EndAdventure" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "END ADVENTURE"
script = ExtResource("3_dnbp1")
signal_to_emit = &"end_adventure"

[node name="Options" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"
script = ExtResource("3_dnbp1")

[node name="MainMenu" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "MAIN MENU"
script = ExtResource("3_dnbp1")

[node name="ExitGame" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "EXIT GAME"
script = ExtResource("3_dnbp1")

[node name="Hand" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(101, 112)
rotation = 1.5707964
sprite_frames = SubResource("SpriteFrames_uucu8")
autoplay = "default"
frame_progress = 0.79728234
flip_v = true
